--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.minlia.cloud.starter</groupId>
   <artifactId>cloud-starter-loggable</artifactId>
-  <version>2.0.0.RELEASE</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Cloud Starter Loggable</name>
@@ -18,7 +20,7 @@
       scm:git:https://github.com/minlia-projects/cloud-starter-loggable.git
     </developerConnection>
     <url>https://github.com/minlia-projects/cloud-starter-loggable</url>
-    <tag>cloud-starter-loggable-2.0.0.RELEASE</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
@@ -30,7 +32,7 @@
 
   <dependencies>
 
-    
+    <!---->
     <!--<dependency>-->
     <!--<groupId>org.apache.commons</groupId>-->
     <!--<artifactId>commons-lang3</artifactId>-->
