--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
+      <optional>true</optional>
     </dependency>
 
   </dependencies>
