--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
   <name>Cloud Starter Loggable</name>
   <description>Cloud Starter Loggable</description>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.0.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+  
   <scm>
     <connection>
       scm:git:https://github.com/minlia-projects/cloud-starter-loggable.git
