--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.minlia.cloud.starter</groupId>
   <artifactId>cloud-starter-loggable</artifactId>
-  <version>2.0.0.RELEASE</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Cloud Starter Loggable</name>
@@ -25,7 +25,7 @@
       scm:git:https://github.com/minlia-projects/cloud-starter-loggable.git
     </developerConnection>
     <url>https://github.com/minlia-projects/cloud-starter-loggable</url>
-    <tag>v2.0.0.RELEASE</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
